--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
@@ -147,8 +147,8 @@
                 <div class="modal-dialog modal-xl">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="aggregateModalLabel">Capture Aggregate Cover type details</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                      <h5 class="modal-title" id="aggregateModalLabel">Capture cover type details</h5>
+                      <button type="button" class="custom-red-button" data-bs-dismiss="modal" aria-label="Close"
                       (click)="closeAggregateCoverDetailsModal()"></button>
                     </div>
                     <div class="modal-body">
@@ -370,7 +370,7 @@
                     </form>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="closeAggregateCoverDetailsModal()">Close</button>
+                      <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="closeAggregateCoverDetailsModal()">Close</button> -->
                       <button type="button" class="btn btn-primary" (click)="isEditMode ? saveEditedCoverDetails() : saveCoverDetails()">Save</button>
                     </div>
                   </div>
