--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
@@ -374,6 +374,53 @@ p-multiSelect {
   float: right;
 }
 
+.modal-header,
+ .modal-footer {
+     border: none;
+     /* Removes the border between header/footer and body of modal */
+ }
+
+ .modal-content {
+  padding: 0 40px;
+ }
+
+ .modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ .custom-red-button {
+  color: transparent;
+  background-color: transparent;
+  border: none;
+}
+
+.custom-red-button::before {
+  content: "X";
+  color: #EE3945;
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th {
+  text-align: left;
+  padding: 8px;
+  background-color: #BAD0E4;
+  white-space: nowrap;
+}
+
+td {
+  padding: 2px;
+}
+
 @media (max-width: 820px) {
   .scrollable-container {
     flex-direction: column;
