--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.css
@@ -98,6 +98,28 @@
     width: 505px;
 }
 
+.modal-header,
+ .modal-footer {
+     border: none;
+     /* Removes the border between header/footer and body of modal */
+ }
+
+ table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th {
+  text-align: left;
+  padding: 8px;
+  background-color: #BAD0E4;
+  white-space: nowrap;
+}
+
+td {
+  padding: 2px;
+}
+
 .modal-header {
   display: flex;
   justify-content: space-between;
